# Starry

./: .eslintignore  README.md  package.json  pnpm-lock.yaml
src/: auto-imports.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  tool.rs
src-tauri/src/extension_manager/: extension_error.rs  extension_store.rs  mod.rs
src-tauri/src/extension_manager/extension_interface/: mod.rs
src-tauri/src/plugin_manager/: mod.rs  plugin_store.rs
src-tauri/src/plugin_manager/plugin_interface/: mod.rs
src-tauri/starry/: Cargo.toml  tauri.conf.json
src-tauri/starry/src/: main.rs
src-tauri/starry/src/extension_manager/: extension_error.rs  extension_store.rs  mod.rs
src-tauri/starry_extension_example/: Cargo.toml
src-tauri/starry_extension_example/src/: lib.rs
src-tauri/starry_extension_interface/: Cargo.toml  README.md
src-tauri/starry_extension_interface/src/: lib.rs
