[package]
name = "starry"
version = "0.1.0"
description = "A Tauri App"
authors = ["sovlookup"]
license = ""
repository = ""
default-run = "starry"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.9", features = [] }

[dependencies]
dynamic_reload = "0.8.0"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1.0.0-rc.11", features = ["api-all"] }
tokio = { version = "1", features = ["full"] }
sled = "0.34.7"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
